--- a/index.html
+++ b/index.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script> 
-  </body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>Dev Environment</title>
+		<meta name="description" content="Dev Environment Checklist">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<div class="splash section">
+			<div class="title">
+				<h1><span class="accent">&lt;</span>devironment<span class="accent">/&gt;</span></h1>
+				<p>take it with you</p>
+			</div>
+		</div>
+		<div class="about section">
+			<div class="container">
+				<h1>What is this?</h1>
+				<p>As developers, we all have a set of specific, necessary tools and processes that we require, in order to do what we do. We all have our favorite editor,  tech-stacks, libraries, or frameworks.</p>
+				<p><em>Devironment</em> is a curated list of tools that I have found to be very useful when building out web products.</p>
+				<a class="start">Get Started</a>
+			</div>
+		</div>
+		<div class="list section" id="list-section">
+			<div class="title">
+				<h1><span class="accent">&lt;</span>devironment<span class="accent">/&gt;</span></h1>
+				<p>take it with you</p>
+			</div>
+			<hr>
+			<ul>
+				<h3>Category</h3>
+				<li>
+					<p>Item 1</p>
+				</li>
+			</ul>
+			<a class="start">Finished</a>
+		</div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+	</body>
 </html>
