--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-		<main>
+
 		<div class="splash section">
 			<div class="title">
-				<h1><span class="accent">&lt;</span>Environment<span class="accent">/&gt;</span></h1>
+				<h1>&lt;Environment/&gt;</h1>
 				<p>take it with you</p>
 			</div>
 		</div>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="list section" id="list-section">
 			<div class="title">
-				<h1><span class="accent">&lt;</span>Environment<span class="accent">/&gt;</span></h1>
+				<h1>&lt;Environment/&gt;</h1>
 				<p>take it with you</p>
 			</div>
 			<hr>
@@ -78,7 +78,7 @@
 					</li>
 				</ul>
 			</div>
-			</main>
+
 			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 			<script type="text/javascript" src="js/main.js"></script>
 		</body>
