about page progress

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
-
 		<div class="splash section">
 			<div class="title">
 				<h1>&lt;Environment/&gt;</h1>
@@ -20,7 +19,13 @@
 			<div class="container">
 				<h1>What is this?</h1>
 				<p>As developers, we all have a set of specific, necessary tools and processes that we require, in order to do what we do. We all have our favorite editor, tech-stacks, libraries, or frameworks.</p>
-				<p><em>Environment</em> is a curated list of tools that I have found to be very useful when building out web products.</p>
+				<div class="icon">
+					<img src="img/webdev.png" alt="Web development image"></div>
+				<div class="icon">
+					<img src="img/webdes.png" alt="Web design image"></div>
+				<div class="icon">
+					<img src="img/webtools.png" alt="Web tools image"></div>
+				<p><em><strong>Environment</strong></em> is a curated list of tools that I have found to be very useful when building out web products.</p>
 				<a class="start" href="#list-section">Get Started</a>
 			</div>
 		</div>
@@ -68,6 +73,7 @@
 					<li>Visual
 						<p>Dr. Slash Icons</p>
 						<p>Adobe Kuler</p>
+						<p>Flaticons</p>
 					</li>
 					<li>Tech-Stack
 						<p>Angular</p>
@@ -78,8 +84,8 @@
 					</li>
 				</ul>
 			</div>
-
-			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-			<script type="text/javascript" src="js/main.js"></script>
-		</body>
-	</html>
+		</div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
+	</body>
+</html>
