--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	<body>
 		<div class="splash section">
 			<div class="title">
-				<h1>&lt;Environment/&gt;</h1>
+				<img src="img/environment.png" id="logo">
 				<p>take it with you</p>
+				<p><a class="down-arrow" href="#about-section">&#8964;</a></p>
 			</div>
 		</div>
-		<div class="about section">
+		<div class="about section" id="about-section">
 			<div class="container">
 				<h1>What is this?</h1>
 				<p>As developers, we all have a set of specific, necessary tools and processes that we require, in order to do what we do. We all have our favorite editor, tech-stacks, libraries, or frameworks.</p>
