most layout done

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<p>Slack</p>
 						<p>Firefox</p>
 					</li>
-					<li class="web-tools-list"><h3 id="web-tools">Web_Tools</h3>
+					<li class="web-tools-list"><h3 id="web-tools">Web Tools</h3>
 						<p>Compressor.io</p>
 						<p>Dafont.com</p>
 						<p>TM Theme Editor</p>
