--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 				<h1>What is this?</h1>
 				<p>As developers, we all have a set of specific, necessary tools and processes that we require, in order to do what we do. We all have our favorite editor, tech-stacks, libraries, or frameworks.</p>
 				<div class="icon">
-					<img src="img/webdev.png" alt="Web development image"></div>
+				<img src="img/webdev.png" alt="Web development image"></div>
 				<div class="icon">
-					<img src="img/webdes.png" alt="Web design image"></div>
+				<img src="img/webdes.png" alt="Web design image"></div>
 				<div class="icon">
-					<img src="img/webtools.png" alt="Web tools image"></div>
+				<img src="img/webtools.png" alt="Web tools image"></div>
 				<p><em><strong>Environment</strong></em> is a curated list of tools that I have found to be very useful when building out web products.</p>
 				<a class="start" href="#list-section">Get Started</a>
 			</div>
@@ -85,6 +85,30 @@
 				</ul>
 			</div>
 		</div>
+		<footer class="footer-distributed">
+			<div class="footer-left">
+				<img src="img/r_logo.png" style="margin-bottom: 10px; width: 45px;">
+				<img src="img/hype_logo.png" style="margin-left: 10px; margin-bottom: 15px; width: 40px;">
+				<p class="footer-company-name"><span style="color:white">RANDY</span>TOLENTINO &copy; 2015</p>
+			</div>
+			<div class="footer-center">
+				<div>
+					<i class="fa fa-map-marker"></i>
+					<p>Austin, TX</p>
+				</div>
+				<div>
+					<i class="fa fa-twitter"></i>
+					<p><a href="https://www.twitter.com/techtolentino">@techtolentino</a></p>
+				</div>
+			</div>
+			<div class="footer-right">
+				<p class="footer-company-about">
+					<span>What's the HYPE?</span>
+					HYPEIDEA focuses on style and functionality with the simple goal of producing a unique web experience for you and your people.
+				</p>
+			</div>
+		</footer>
+		
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
