--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 		</div>
 		<footer class="footer-distributed">
 			<div class="footer-left">
-				<img src="img/r_logo.png" style="margin-bottom: 10px; width: 45px;">
-				<img src="img/hype_logo.png" style="margin-left: 10px; margin-bottom: 15px; width: 40px;">
+				<a href="http://randytolentino.com" target="blank"><img src="img/r_logo.png" style="margin-bottom: 10px; width: 45px;"></a>
+				<a href="http://hypeidea.com" target="blank"><img src="img/hype_logo.png" style="margin-left: 10px; margin-bottom: 15px; width: 40px;"></a>
 				<p class="footer-company-name"><span style="color:white">RANDY</span>TOLENTINO &copy; 2015</p>
 			</div>
 			<div class="footer-center">
