--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			</div>
 			<div class="footer-right">
 				<p class="footer-company-about">
-					<span>What's the HYPE?</span>
-					HYPEIDEA focuses on style and functionality with the simple goal of producing a unique web experience for you and your people.
+					<span>About the dev</span>
+					RANDY TOLENTINO is a former hip hop artist who took his passion for creatin ill shit to the world of software development.
 				</p>
 			</div>
 		</footer>
