update about content

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			</div>
 			<div class="footer-right">
 				<p class="footer-company-about">
-					<span>About the dev</span>
-					RANDY TOLENTINO is a former hip hop artist who took his passion for creatin ill shit to the world of software development.
+					<span>About the Developer</span>
+					RANDY TOLENTINO is a former hip hop artist who took his passion for creatin ill shit to the world of software development. He's currently works for IBM Design in Austin, TX.
 				</p>
 			</div>
 		</footer>
