--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="footer-right">
 				<p class="footer-company-about">
 					<span>About the Developer</span>
-					Randy Tolentino is a former hip-hop artist turned software developer. He's currently works for IBM Design in Austin, TX.
+					Randy Tolentino is a former hip-hop artist turned software developer. He currently works for IBM Design in Austin, TX.
 				</p>
 			</div>
 		</footer>
