changing down arrow

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="title">
 				<img src="img/environment.png" id="logo">
 				<p>take it with you</p>
-				<p><a class="down-arrow" href="#about-section">&#8964;</a></p>
+				<p><a class="down-arrow" href="#about-section"><img src="img/arrow.png"alt="Arrow"></a></p>
 			</div>
 		</div>
 		<div class="about section" id="about-section">
