spacing issues paragraph line height. needed to run gulp to process sass.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<img src="img/webdes.png" alt="Web design image"></div>
 				<div class="icon">
 				<img src="img/webtools.png" alt="Web tools image"></div>
-				<p><em>Devironment</em> is a set curated, useful tools for building out web products.</p>
+				<p><em>Devironment</em> is a set of curated, useful tools for building out web shit.</p>
 				<a class="start" href="#list-section">Get Started</a>
 			</div>
 		</div>
